// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Editor page markers adding marker at end 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
## Page 2"
/>
`;

exports[`Editor page markers adding marker at start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
## Page 2
page 1 info"
/>
`;

exports[`Editor page markers adding marker in the middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
## Page 2
## Page 3
page 2 info"
/>
`;

exports[`Editor page markers first marker 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1"
/>
`;

exports[`Editor page markers pasting content with page count in double digits 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
## Page 2
## Page 3
## Page 4
## Page 5
## Page 6
## Page 7
## Page 8
## Page 9
## Page 10
## Page 11
## Page 12
## Page 13"
/>
`;

exports[`Editor page markers pasting page at end 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 2 info
## Page 2
page 1 info"
/>
`;

exports[`Editor page markers pasting page at start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 3 info
## Page 2
page 1 info
## Page 3
page 2 info"
/>
`;

exports[`Editor page markers pasting page in middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
## Page 2
page 3 info
## Page 3
page 2 info"
/>
`;

exports[`Editor page markers remove page from middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
## Page 2
page 3 info"
/>
`;

exports[`Editor page markers remove page from start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 2 info
## Page 2
page 3 info"
/>
`;

exports[`Editor panel markers adding another panel to second page 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 1 info
## Page 2
### Panel 1
### Panel 2"
/>
`;

exports[`Editor panel markers adding panel at start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
### Panel 1
### Panel 2
panel 1 info"
/>
`;

exports[`Editor panel markers adding panel in middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 1 info
### Panel 2
### Panel 3
panel 2 info"
/>
`;

exports[`Editor panel markers adding panel to page 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
### Panel 1"
/>
`;

exports[`Editor panel markers adding panel to second page 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 1 info
## Page 2
### Panel 1"
/>
`;

exports[`Editor panel markers adding second panel to page 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
### Panel 1
### Panel 2"
/>
`;

exports[`Editor panel markers pasting panel at start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
page 1 info
### Panel 1
### Panel 2
panel 1 info"
/>
`;

exports[`Editor panel markers pasting panel in middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 1 info
### Panel 2
### Panel 3
panel 2 info"
/>
`;

exports[`Editor panel markers removing panel from middle 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 1 info
### Panel 2
panel 3 info"
/>
`;

exports[`Editor panel markers removing panel from start 1`] = `
<textarea
  className="Editor"
  id="editor"
  onChange={[Function]}
  onScroll={[Function]}
  value="## Page 1
### Panel 1
panel 2 info"
/>
`;
